<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_menu_copy">Copy</string>
    <string name="action_menu_delete">Delete</string>
    <string name="action_menu_edit">Edit</string>
    <string name="action_menu_move_down">Move down</string>
    <string name="action_menu_move_up">Move up</string>
    <string name="active_card">ACTIVE CARD</string>
    <string name="add_picture">Add picture</string>
    <string name="added_extended_one_year">Subscribed for one more year</string>
    <string name="added_one_slot">Added one free slot</string>
    <string name="added_three_slot">Added three worker slots</string>
    <string name="button_full_reset">Reset all data and settings</string>
    <string name="buy_workers">Buy slots</string>
    <string name="card_added">Created:</string>
    <string name="card_brand">Brand:</string>
    <string name="card_brand_unknown">Unknown</string>
    <string name="card_copied">card copied</string>
    <string name="card_country">Country</string>
    <string name="card_cvv">CVV:</string>
    <string name="card_cvv_opt">CVV (Optional):</string>
    <string name="card_data">Card data:</string>
    <string name="card_exp">Expiration:</string>
    <string name="card_issuer">Issuer:</string>
    <string name="card_last_used">Last used:</string>
    <string name="card_limit_is">Limit is</string>
    <string name="card_name">Card name:</string>
    <string name="card_name_exists">Name already exists</string>
    <string name="card_name_on_card">Card holder:</string>
    <string name="card_no_image">No\10Image</string>
    <string name="card_number">Card number:</string>
    <string name="card_pasted">card pasted</string>
    <string name="card_read_mag_bad">Invalid data</string>
    <string name="card_read_mag_error">Unable to record</string>
    <string name="card_read_mag_no_data">No data</string>
    <string name="card_read_mag_ok">Data read OK</string>
    <string name="card_read_mag_title">Swipe your card on the reader</string>
    <string name="card_read_nfc_error">Error reading card:</string>
    <string name="card_read_nfc_error_unknown">Error card unknown</string>
    <string name="card_read_nfc_title">Hold your card close to the phone</string>
    <string name="card_read_nfc_unable">Unable to get track2</string>
    <string name="card_read_waiting">Waiting for card…</string>
    <string name="card_type">Type:</string>
    <string name="cards_capital_c">Cards:</string>
    <string name="cards_copied">cards copied</string>
    <string name="cards_pasted">cards pasted</string>
    <string name="cards_per_worker">cards per worker</string>
    <string name="cards_saved">cards saved</string>
    <string name="change_password">Change password</string>
    <string name="clear_password">Clear password</string>
    <string name="cloud_access_return_null">Could not get data</string>
    <string name="cloud_download_done">Download complete</string>
    <string name="cloud_upload_done">Upload complete</string>
    <string name="confirm_new_password">Confirm new</string>
    <string name="confirm_password">Confirm password</string>
    <string name="context_delete">Delete card</string>
    <string name="context_edit">Edit card</string>
    <string name="copy_card_exists">Cards already exist:</string>
    <string name="copy_error">Copy error</string>
    <string name="current_password">Enter current password</string>
    <string name="data_in_use_warning">Data is in use. Add anyway?</string>
    <string name="delete_card">Delete card</string>
    <string name="dialog_alert_text">The app needs to be granted permission to record audio</string>
    <string name="dialog_alert_title">Not permited</string>
    <string name="dialog_edit_title">Current track data</string>
    <string name="download_data_warning">You will lose all changes. Continue?</string>
    <string name="drawer_add_card">Add new card</string>
    <string name="drawer_card_list">Card list</string>
    <string name="drawer_cloud_download">Reload data</string>
    <string name="drawer_cloud_upload">Upload changes</string>
    <string name="drawer_edit_card">Edit card</string>
    <string name="drawer_home">Active card</string>
    <string name="drawer_is_default">MyCard is your default pay app</string>
    <string name="drawer_is_not_default">MyCard is not your default pay app</string>
    <string name="drawer_manager">Manager info</string>
    <string name="drawer_saved_cards">Saved cards</string>
    <string name="drawer_set_as_default">Set as default pay app</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_show_all_info">Show all card info</string>
    <string name="drawer_worker_app">Get worker app</string>
    <string name="drawer_worker_cards">Worker cards</string>
    <string name="drawer_worker_details">Worker details</string>
    <string name="drawer_workers">Workers</string>
    <string name="edit_data_hidden">***CARD DATA IS HIDDEN***</string>
    <string name="enter_password">Enter password</string>
    <string name="error_cloud_access">Connection failed</string>
    <string name="error_zero_workers">Worker list is empty</string>
    <string name="list_empty">(Card list is empty)</string>
    <string name="load_saved_card">Load a saved card</string>
    <string name="menu_text">Set as default app</string>
    <string name="must_fill_name_and_data">Must fill name and data</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="ncf_message_body">This app requires an NFC enabled phone for the payment to work</string>
    <string name="ncf_message_title">Error checking pay app</string>
    <string name="new_password">New password (Empty to clear)</string>
    <string name="no_sign_in">Not signed in</string>
    <string name="payment_processing">Processing payment…</string>
    <string name="purchase_1_slot">1 slot</string>
    <string name="purchase_3_slot">3 slots</string>
    <string name="purchase_slots_title">Buy slots for new workers</string>
    <string name="service_desc">Card Service</string>
    <string name="set_password">Set password</string>
    <string name="settings_pass_to_start">Ask for password at startup</string>
    <string name="settings_sounds">Enable sound</string>
    <string name="snack_full_reset">Cards and settings cleared</string>
    <string name="snack_password_changed">Password changed</string>
    <string name="snack_password_cleared">Password cleared</string>
    <string name="snack_password_set">Password set</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_card">card</string>
    <string name="string_cards">cards</string>
    <string name="string_continue">Continue</string>
    <string name="string_delete">Delete</string>
    <string name="string_no">No</string>
    <string name="string_one_year">one year</string>
    <string name="string_share">Share this app</string>
    <string name="string_workers">Workers:</string>
    <string name="string_yes">Yes</string>
    <string name="swipe_delete">DELETE</string>
    <string name="swipe_edit">EDIT</string>
    <string name="title_activity_select_picture">Select Picture</string>
    <string name="total_cards">Total cards:</string>
    <string name="track_data_clear">CLEAR</string>
    <string name="track_data_edit">EDIT</string>
    <string name="track_data_mag">SWIPE</string>
    <string name="track_data_nfc">SCAN</string>
    <string name="track_data_paste">PASTE</string>
    <string name="unset_value">{Not Set}</string>
    <string name="upgrade_to_full">Get the full version</string>
    <string name="warning_default_card">Default Visa debit card with zero balance</string>
    <string name="warning_full_reset">Clear all cards and settings?</string>
    <string name="warning_invalid_card">Invalid swipe data</string>
    <string name="warning_nfc">NFC not available</string>
    <string name="warning_possible_invalid_card">Unable to verify data</string>
    <string name="warning_track_data_empty">No track data</string>
    <string name="warning_track_data_in_use">Swipe data already used</string>
    <string name="warning_track_data_ok">Valid data</string>
    <string name="worker_added">Added:</string>
    <string name="worker_exp_extend">Extend</string>
    <string name="worker_expired_warning">Worker has expired.</string>
    <string name="worker_expires">Expires:</string>
    <string name="worker_last_access">Last access:</string>
    <string name="zero_cards">(You have no available cards)</string>
    <string name="zero_saved_cards">You have no saved cards</string>
    <string name="zero_worker_cards">Worker has no cards</string>
    <string name="PPSE">PPSE</string>
    <string name="Visa">Visa</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="app_name">MyCard</string>
    <string name="app_name_and_version">MyCard 1.12</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="paymentGroup">Card Service</string>
    <string name="roaddogs_email">roaddogssoftware@gmail.com</string>
</resources>
