<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_delete_white_24dp" android:id="@+id/item_delete" android:title="@string/action_menu_delete" android:titleCondensed="@string/action_menu_delete" app:showAsAction="never|ifRoom|withText"/>
    <item android:icon="@drawable/ic_edit" android:id="@+id/item_edit" android:title="@string/action_menu_edit" android:titleCondensed="@string/action_menu_edit" app:showAsAction="never|ifRoom|withText"/>
    <item android:icon="@android:drawable/arrow_up_float" android:id="@+id/item_move_up" android:title="@string/action_menu_move_up" android:titleCondensed="@string/action_menu_move_up" app:showAsAction="never|ifRoom|withText"/>
    <item android:icon="@android:drawable/arrow_down_float" android:id="@+id/item_move_down" android:title="@string/action_menu_move_down" android:titleCondensed="@string/action_menu_move_down" app:showAsAction="never|ifRoom|withText"/>
</menu>
