<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <FrameLayout android:id="@+id/layout_cardname" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:gravity="center" android:id="@+id/current_cardname" android:paddingTop="12dp" android:paddingBottom="7dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/active_card"/>
                <FrameLayout android:layout_gravity="end" android:id="@+id/buttonContext" android:layout_width="wrap_content" android:layout_height="match_parent" android:paddingStart="10dp">
                    <ImageView android:layout_gravity="center" android:background="@drawable/ic_three_dot_black_24dp" android:layout_width="30dp" android:layout_height="30dp" android:layout_marginEnd="5dp"/>
                </FrameLayout>
            </FrameLayout>
            <FrameLayout android:id="@+id/pagerFrame" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/layout_cardname">
                <android.support.p016v4.view.ViewPager android:id="@+id/pager" android:layout_width="match_parent" android:layout_height="200dp"/>
                <ImageView android:layout_gravity="left|center_vertical|center_horizontal|center" android:id="@+id/left_nav" android:background="#22000000" android:visibility="gone" android:layout_width="35dp" android:layout_height="100dp" android:src="@drawable/ic_chevron_left_white_24dp"/>
                <ImageView android:layout_gravity="right|center_vertical|center_horizontal|center" android:id="@+id/right_nav" android:background="#22000000" android:visibility="gone" android:layout_width="35dp" android:layout_height="100dp" android:src="@drawable/ic_chevron_right_white_24dp"/>
                <LinearLayout android:layout_gravity="bottom|right|center_vertical|center_horizontal|center|end" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center" android:id="@+id/button_edit" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/fab_margin" android:src="@drawable/ic_edit_40"/>
                    <ImageView android:layout_gravity="center" android:id="@+id/button_zoom" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/fab_margin" android:src="@drawable/ic_zoom_in_white_24dp"/>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/viewPagerCountDots" android:paddingTop="6dp" android:paddingBottom="11dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/pagerFrame" android:layout_centerHorizontal="true"/>
            <android.support.p019v7.widget.CardView android:layout_gravity="center" android:id="@+id/table_card_info2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="3dp" android:layout_below="@+id/viewPagerCountDots" android:layout_marginStart="5dp" android:layout_marginEnd="5dp" app:cardBackgroundColor="#ffffff" app:cardCornerRadius="5dp" app:cardElevation="2dp">
                <TableLayout android:id="@+id/table_card_info" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5dp" android:stretchColumns="1" android:shrinkColumns="1">
                    <TableRow android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:paddingLeft="5sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="SWIPE DATA: "/>
                        <TextView android:textSize="15sp" android:id="@+id/current_swipe_data" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unset_value" android:textIsSelectable="true"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_name_on_card" android:paddingStart="5sp" android:paddingEnd="5sp"/>
                        <TextView android:id="@+id/name_on_card" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unset_value" android:textIsSelectable="true"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_number" android:paddingStart="5sp" android:paddingEnd="5sp"/>
                        <TextView android:id="@+id/card_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unset_value" android:textIsSelectable="true"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_exp" android:paddingStart="5sp" android:paddingEnd="5sp"/>
                        <TextView android:id="@+id/card_expiration" android:background="#f7ffaf" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unset_value" android:textIsSelectable="true"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_cvv" android:paddingStart="5sp" android:paddingEnd="5sp"/>
                        <TextView android:id="@+id/card_cvv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unset_value" android:textIsSelectable="true"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_brand" android:paddingStart="5sp" android:paddingEnd="5sp"/>
                        <TextView android:id="@+id/card_brand" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unset_value" android:textIsSelectable="true"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_added" android:paddingStart="5sp" android:paddingEnd="5sp"/>
                        <TextView android:id="@+id/card_added" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unset_value" android:textIsSelectable="true"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_last_used" android:paddingStart="5sp" android:paddingEnd="5sp"/>
                        <TextView android:id="@+id/card_Last_used" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unset_value" android:textIsSelectable="true"/>
                    </TableRow>
                </TableLayout>
            </android.support.p019v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
