<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/swipeLayout" android:layout_width="match_parent" android:layout_height="wrap_content" app:leftEdgeSwipeOffset="0dp" app:rightEdgeSwipeOffset="0dp">
    <LinearLayout android:id="@+id/bottom_wrapper_right" android:layout_width="140dp" android:layout_height="match_parent" android:weightSum="2">
        <TextView android:textStyle="bold" android:textColor="#fff" android:gravity="center" android:id="@+id/tvDeleteRight" android:background="@color/colorPrimaryDark" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/swipe_delete" android:layout_weight="1"/>
        <TextView android:textStyle="bold" android:textColor="#fff" android:gravity="center" android:id="@+id/tvEditRight" android:background="@color/colorPrimaryDark" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/swipe_edit" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/bottom_wrapper_left" android:layout_width="140dp" android:layout_height="match_parent" android:weightSum="2">
        <TextView android:textStyle="bold" android:textColor="#fff" android:gravity="center" android:id="@+id/tvDeleteLeft" android:background="@color/colorPrimaryDark" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/swipe_delete" android:layout_weight="1"/>
        <TextView android:textStyle="bold" android:textColor="#fff" android:gravity="center" android:id="@+id/tvEditLeft" android:background="@color/colorPrimaryDark" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/swipe_edit" android:layout_weight="1"/>
    </LinearLayout>
    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <android.support.p019v7.widget.CardView android:layout_gravity="center" android:id="@+id/cardView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="3sp" app:cardBackgroundColor="#ffffff" app:cardCornerRadius="5dp" app:cardElevation="2dp">
            <LinearLayout android:orientation="horizontal" android:id="@+id/cardViewFrame" android:layout_width="match_parent" android:layout_height="wrap_content">
                <FrameLayout android:layout_width="141dp" android:layout_height="90dp">
                    <TextView android:textSize="15sp" android:textColor="@color/colorPrimary" android:layout_gravity="center" android:id="@+id/list_item_text_no_image" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_no_image" android:textAlignment="center"/>
                    <ImageView android:id="@+id/imageViewCard" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/card_empty" android:scaleType="centerInside" android:adjustViewBounds="true"/>
                    <ImageView android:id="@+id/imageChecked" android:padding="5dp" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/ic_check_red_70dp" android:scaleType="centerInside" android:adjustViewBounds="true"/>
                </FrameLayout>
                <FrameLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
                    <ImageButton android:layout_gravity="top|right|center_vertical|center_horizontal|center|end" android:id="@+id/delete_btn" android:background="#00000000" android:visibility="gone" android:layout_width="35dp" android:layout_height="35dp" android:src="@drawable/ic_delete_darkgrey_24dp"/>
                    <FrameLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="15sp" android:id="@+id/list_item_nickname" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_marginTop="0dp" android:text="card name"/>
                        <TextView android:textSize="15sp" android:id="@+id/list_item_number" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_marginTop="25dp" android:text="1234 1234 1234 1234"/>
                        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                            <TextView android:textSize="15sp" android:id="@+id/list_item_exp" android:background="#f7ffaf" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_marginTop="50dp" android:text="EXP: 01/01"/>
                            <TextView android:textSize="15sp" android:id="@+id/list_item_cvv" android:paddingLeft="15dp" android:paddingRight="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_marginTop="50dp" android:text="CVV: 123"/>
                        </LinearLayout>
                    </FrameLayout>
                </FrameLayout>
            </LinearLayout>
        </android.support.p019v7.widget.CardView>
    </FrameLayout>
</com.daimajia.swipe.SwipeLayout>
